--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
