--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "plyr": "^3.6.8",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
@@ -25,7 +26,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "hard-source-webpack-plugin": "^0.13.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
